--- a/Name_quiz.html
+++ b/Name_quiz.html
@@ -27,17 +27,17 @@
                 </div>
                 <div class="answers">
                     <div>
-                        <input class="input" id="answer1" name="answer1"><Br><Br>
+                        <input class="input" id="answer1" name="answer1">
                     </div>
 
                 </div>
             </div>
             <div>
-                <h2>Next:<br></h2>
+                <h2>Next:</h2>
             </div>
             <div class="button-box">
-                <button type="submit"><h2>Q. Answer</h2></button>
-                <button type="submit"><h2>Q. Options</h2></button>
+                <button type="submit">Q. Answer</button>
+                <button type="submit">Q. Options</button>
             </div>
         </form>
     </div>
