--- a/login.html
+++ b/login.html
@@ -21,15 +21,12 @@
             </div>
             <div class="question-card-open">
                 <div class="question-open">
-                    <div><h2>Login:<br></h2></div>
+                    <div><label>Login:<br></label></div>
                     <div><input class="input" id="answer2" name="answer1"></div>
                 </div>
-                <div class="answers">
-                    <div><h2>Password:<br></h2></div>
-                    <div>
-                        <input class="input" id="answer1" name="answer1"><Br><Br>
-                    </div>
-
+                <div class="passwords">
+                    <div><label>Password:<br></label></div>
+                    <div><input class="input" id="answer3" name="answer1"></div>
                 </div>
             </div>
             <div class="button-center">
