--- a/question.html
+++ b/question.html
@@ -27,19 +27,19 @@
                 <div class="answers">
                     <div>
                         <input type="radio"  class="custom-radio" id="answer1" name="answer1" value="1">
-                        <label for="answer1">Faculty of Computer-Aided Design</label><Br>
+                        <label for="answer1">Faculty of Computer-Aided Design</label>
                     </div>
                     <div>
                         <input type="radio"  class="custom-radio" id="answer2" name="answer1" value="1">
-                        <label for="answer2">Military Faculty</label><Br>
+                        <label for="answer2">Military Faculty</label>
                     </div>
                     <div>
                         <input type="radio" class="custom-radio" id="answer3" name="answer1" value="1">
-                        <label for="answer3">Faculty of Computer Systems and Networks</label><Br>
+                        <label for="answer3">Faculty of Computer Systems and Net</label>
                     </div>
                     <div>
                         <input type="radio" class="custom-radio" id="answer4" name="answer1" value="1">
-                        <label for="answer4">Faculty of Enginering and Economy</label><Br>
+                        <label for="answer4">Faculty of Enginering and Economy</label>
                     </div>
                 </div>
             </div>
