--- a/login.html
+++ b/login.html
@@ -21,11 +21,11 @@
             </div>
             <div class="question-card-open">
                 <div class="question-open">
-                    <div><label>Login:<br></label></div>
+                    <div><label>Login:</label></div>
                     <div><input class="input" id="answer2" name="answer1"></div>
                 </div>
                 <div class="passwords">
-                    <div><label>Password:<br></label></div>
+                    <div><label>Password:</label></div>
                     <div><input class="input" id="answer3" name="answer1"></div>
                 </div>
             </div>
