--- a/CandyQuizJS/index.html
+++ b/CandyQuizJS/index.html
@@ -214,6 +214,29 @@
         </form>
     </div>
 </script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+
+<!-- Add Firebase products that you want to use -->
+<script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-firestore.js"></script>
+
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyA_6NuKijPsSXuyP_w5H0SlH0c4W7Jho9o",
+        authDomain: "candyquiz-70333.firebaseapp.com",
+        projectId: "candyquiz-70333",
+        storageBucket: "candyquiz-70333.appspot.com",
+        messagingSenderId: "502796960316",
+        appId: "1:502796960316:web:f11733c19447355ad4f939"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+</script>
 
 
 </body>
